// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features null coalesce 1`] = `
"\\"use strict\\";

var A = null;
A !== null && A !== void 0 ? A : 2;"
`;

exports[`features optional chaining 1`] = `
"\\"use strict\\";

var A = null;
var B = (A === null || A === void 0 ? void 0 : A.toFixed(2)) || 3;
B;"
`;
